FFmpegfs NEWS

Important changes in 1.10 (2019-11-XX)

* Support:
* Feature:
* Bugfix: Moved video deinterlace filtering before rescaling. Deinterlace does not work properly on
          rescaled videos, what a suprise. Especially caused strange results on Bluray sources,
          created blurred frames if downscaled from HD to SD (or lower) before deinterlacing.
* Known bug:

Important changes in 1.9 (2019-11-18)

* Support: Code has now been tested to work on ARMv7 (32 bit).
* Feature: Documented the whole project with Doxygen.
* Feature: Implemented a thread pool. File open (and thread starts) are now much faster than before.
           The thread pool also ensures that not more threads than configured are started. Defaults
           to 16x the number of processor cores available.
* Feature: Added Apple Lossles Audio Compression (ALAC) support.
* Feature: Added optional graphviz to configure, only required for Doxygen.
* Feature: Updated INSTALL.md with missing prerequisites. Rearranged paragraphs, mentioning building
           from git first was confusing.
* Feature: Moved cache directory from rather unusual /tmp/ffmpegfs location to /var/cache/ffmpegfs.
* Bugfix: Fixed several warnings if compiled for 32 bit.
* Bugfix: Removed unused xmlint prerequisite from configure.
* Bugfix: Video and audio was out of sync on android devices.
* Bugfix: Fix crash when Bluray video without audio was opened.
* Bugfix: Cache files were left at the predicted size if it was larger than the result size.
          Size is now correctly capped to the correct result size.
* Fixed deprecation in fpcompare: 2018-04-01 - f1805d160d - lavfi 7.14.100 - avfilter.h
    Deprecate use of avfilter_register(), avfilter_register_all(),
    avfilter_next(). Added av_filter_iterate().

Important changes in 1.8 (2019-05-23)

This is a bugfix/maintenance release with only a few minor features added.

* Feature: Added Doxygen documentation.
* Feature: Report all errors together with error number.