@@ -246,27 +246,43 @@ bool Buffer::unmap_file(const std::string &filename, int * fd, uint8_t **p, size
     // Clear all variables
     p           = nullptr;
     *filesize   = 0;
-    *buffer_pos = 0;
+    if (buffer_pos != nullptr)
+    {
+        *buffer_pos = 0;
+    }
     *fd         = -1;
 
     if (__p != nullptr)
     {
-        if (munmap(__p, __filesize) == -1)
+        if (munmap(__p, __filesize ? __filesize : static_cast<size_t>(sysconf(_SC_PAGESIZE))) == -1) // Make sure we do not unmap a zero size file (spitzs EINVBAL error)
         {
-            Logging::error(filename, "File unmapping failed: (%1) %2", errno, strerror(errno));
+            Logging::error(filename, "Unmapping cache file failed: (%1) %2 %3", errno, strerror(errno), __filesize);
+            fprintf(stderr, "P = %p size = %zi\n", __p, __filesize);
             success = false;
         }
     }
 
     if (__fd != -1)
     {
-        if (ftruncate(__fd, static_cast<off_t>(__filesize)) == -1)
+        if (__filesize)
         {
-            Logging::error(filename, "Error calling ftruncate() to resize and close the file: (%1) %2 (fd = %3)", errno, strerror(errno), __fd);
-            success = false;
+            if (ftruncate(__fd, static_cast<off_t>(__filesize)) == -1)
+            {
+                Logging::error(filename, "Error calling ftruncate() to resize and close the cache file: (%1) %2 (fd = %3)", errno, strerror(errno), __fd);
+                success = false;
+            }
+            ::close(__fd);
         }
+        else
+        {
+            ::close(__fd);
 
-        ::close(__fd);
+            if (unlink(filename.c_str()))
+            {
+                Logging::error(filename, "Error removing the cache file: (%1) %2 (fd = %3)", errno, strerror(errno), __fd);
+                success = false;
+            }
+        }
     }
 
     return success;
